--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh; 
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+        */
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,7 +31,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates qui, aut minus veritatis tempore a similique nulla id hic ut illum non ex modi officiis pariatur, consequuntur necessitatibus odio molestiae?Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, velit quo. Voluptate, quis soluta maiores expedita asperiores illum dolore. Sed ab minima quasi nulla officiis itaque assumenda exercitationem eum Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus id possimus impedit, repellendus suscipit, pariatur dolore laboriosam assumenda maxime corporis quaerat amet! Blanditiis ratione magnam quia corrupti amet dolor enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit doloremque eos necessitatibus voluptatem ducimus facere placeat eligendi. Eos dolore pariatur doloribus, enim doloremque repellat, eius vitae quidem adipisci culpa veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, distinctio ipsum? Nostrum quasi iure, exercitationem fuga saepe nam perspiciatis cum quos officiis recusandae corrupti mollitia eum veritatis quae, excepturi itaque!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates qui, aut minus veritatis tempore a similique nulla id hic ut illum non ex modi officiis pariatur, consequuntur necessitatibus odio molestiae?Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, velit quo. Voluptate, quis soluta maiores expedita asperiores illum dolore. Sed ab minima quasi nulla officiis itaque assumenda exercitationem eum Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus id possimus impedit, repellendus suscipit, pariatur dolore laboriosam assumenda maxime corporis quaerat amet! Blanditiis ratione magnam quia corrupti amet dolor enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit doloremque eos necessitatibus voluptatem ducimus facere placeat eligendi. Eos dolore pariatur doloribus, enim doloremque repellat, eius vitae quidem adipisci culpa veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, distinctio ipsum? Nostrum quasi iure, exercitationem fuga saepe nam perspiciatis cum quos officiis recusandae corrupti mollitia eum veritatis quae, excepturi itaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nemo cumque, perspiciatis provident, quo eum, consequuntur nulla accusamus repellat sed ad? Dignissimos odit, magnam in molestiae exercitationem expedita est deserunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nesciunt delectus aliquam alias debitis eos expedita perferendis. Asperiores et, numquam dignissimos iure minus veniam repellat necessitatibus illum corporis quo debitis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore accusantium reiciendis nesciunt rem quo magnam voluptate consequuntur architecto sapiente fugit velit, praesentium nemo labore, culpa eaque molestiae doloribus voluptates dignissimos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic recusandae, molestias tempora magnam sapiente quasi assumenda facere quisquam vel ab delectus illum quos ea libero, sit maxime iusto beatae dolores! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam perferendis, natus praesentium, tempora atque consequuntur inventore commodi unde deleniti exercitationem, sapiente obcaecati odio harum corporis dignissimos aut animi! Eos, est. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus impedit repellendus magni, nihil itaque recusandae, officiis aut molestias aspernatur aliquid odit quas voluptate, quis dolores inventore consequuntur voluptatibus quasi.</p>
     </main>
     
 </body>
