--- a/exercícios/ex023/tabela001.html
+++ b/exercícios/ex023/tabela001.html
@@ -11,25 +11,25 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-            border: 4px solid red;
-        }
-        tr.linha{
-            background-color: gray;
         }
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
         }
-        td.dado{
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
+
     </style>
 </head>
 <body>
 <h1>Minha primeira tabela</h1>    
 <table>
-    <tr class="linha">
+    <tr>
         <td>a1</td>
         <td>b1</td>
         <td>c1</td>    
@@ -37,16 +37,16 @@
     <tr>
         <td>a2</td>
         <td>b2</td>
-        <td>c2</td>
+        <td class="numero">c2</td>
     </tr>
     <tr>
         <td>a3</td>
-        <td>b3</td>
+        <td class="numero">b3</td>
         <td>c3</td>
     </tr>
     <tr>
         <td>a4</td>
-        <td class="dado">b4</td>
+        <td>b4</td>
         <td>c4</td>
     </tr>
 </table>
