--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -26,8 +26,11 @@
             background-color: black;
             color: white;
         }
-        tbody tr {
-            
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
+        }
+        tbody > tr:nth-child(even){
+            background-color: white;
         }
         td.num {
             text-align: right;
