--- a/exercícios/ex024/iframe002.html
+++ b/exercícios/ex024/iframe002.html
@@ -18,7 +18,9 @@
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sunt aliquid voluptatibus, nam neque quae dicta nihil animi, officiis rerum quasi? Vero, officiis suscipit aspernatur magnam minus quis cumque sequi?</p>
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compatível.</p>
+    </iframe>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cum quisquam repudiandae veniam quia porro doloribus laborum delectus. Soluta tenetur debitis sequi ad eos exercitationem delectus. Sunt totam optio Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur modi earum assumenda quis ducimus magnam mollitia veniam quam placeat id cupiditate, architecto quibusdam neque aspernatur corrupti optio doloribus at. Dolore? </p>
 </body>
 </html>
