--- a/exercícios/ex024/iframe003.html
+++ b/exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, fugiat. Ullam ea officia, eius molestias, cum hic temporibus suscipit esse ut laboriosam itaque voluptatibus similique beatae? Sed quae repellat reprehenderit! Lorem, ipsum dolor sit amet consectetur adipisicing elit. In voluptatem numquam, aperiam, necessitatibus officiis fugiat cum id quasi nisi voluptate labore. Minima enim magnam, quis harum natus cumque saepe suscipit? </p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc=" <h1>Escolha uma das opções acima </h1>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quis adipisci vero quia architecto, voluptatum quas aliquid, quaerat corrupti labore hic maxime debitis deserunt perspiciatis temporibus quidem? Dolorum, eligendi placeat! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam nobis eligendi rerum, architecto recusandae veniam eveniet fugit quasi nisi, atque impedit consequatur excepturi non! Provident id saepe illum labore aperiam! </p>
